hphp/test/zend/good/ext/standard/tests/file/copy_variation5.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if( (stristr(PHP_OS, "Darwin")) || (stristr(PHP_OS, "Win")) )
  die("skip do not run on MacOS/Windows");
}
