hphp/test/zend/bad/ext/standard/tests/file/tempnam_variation7-win32.php.skipif
<?php
if(substr(PHP_OS, 0, 3) != "WIN")
  die("skip Only run on Windows");
?>